# src_platform_strongswan-clip-updown

./: AUTHORS  README.md  updown.patch
src/libcharon/plugins/clip_updown/: Makefile.am  clip_updown_listener.c  clip_updown_listener.h  clip_updown_plugin.c  clip_updown_plugin.h
